--- a/jasmine-standalone-2.3.4/SpecRunner.html
+++ b/jasmine-standalone-2.3.4/SpecRunner.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.3.4/jasmine_favicon.png">
   <link rel="stylesheet" href="lib/jasmine-2.3.4/jasmine.css">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="lib/jasmine-2.3.4/jasmine.js"></script>
   <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="lib/jasmine-2.3.4/boot.js"></script>
@@ -18,7 +19,6 @@
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script>
-
 </head>
 
 <body>
